syntax = "proto3";
package atwany;

message UploadSingle {

}
message UploadMany {

}
enum ImageSize {
    THUMBNAIL = 0;
    SMALL = 1;
    MEDIUM = 2;
    ORIGINAL = 3;
}


message UploadResponse {
    repeated ImageSize size = 1;
    string filename = 2;
    string fileExtension = 3;
    string aspectRatio = 4; // '16x9'
}

message UploadRequest {
    bytes image = 1;
    string fileName = 2;
}
service Upload {
    rpc upload (UploadRequest) returns (UploadResponse);
}
