syntax = "proto3";
package atwany;

message media {
    enum Size {
        ORIGINAL = 0; // the ordinal one with compression
        PLACEHOLDER = 1; // VERY SMALL VARIANT LESS THAN 1 K 20X20
        THUMBNAIL = 2; // smaller variant  200x200 thumbnail
        SMALL = 3; // smaller variant  400x400 thumbnail
        MEDIUM = 4; //small variant fo the image 500*500
    }
    enum AspectRatio {
        DEFAULT = 0;
        X16X9 = 1;
    }

    enum MimeType {
        PNG = 0;
        JPEG = 1;
        GIF = 2;
        WEBP = 3;
    }

    message UploadAndWriteResponse {
        string fileExtension = 1;
        string aspectRatio = 2;
        message MediaSize {
            uint32 width = 3;
            uint32 height = 4;
            Size size = 5;
            string urlSuffix=6;


        }
		repeated MediaSize mediaMeta = 6;
		string blurHash=8;
	}
    message UploadResponse {
        Size size = 1;
        bytes buffer = 2;
        string fileExtension = 3;
        string aspectRatio = 4;
        uint32 width = 5;
        uint32 height = 6;
        string urlSuffix=7;
    }

    message UploadRequest {
        bytes image = 1;
        MimeType mimetype = 2;
        string fileName = 3;
    }
	message FileUpload {
		bytes file = 1;
		string fileExtension = 2;
		string fileName = 3;
	}
	message FileUploadResponse {
		string fileExtension = 1;
	}
}

service Media {
    rpc Upload (media.UploadRequest) returns (stream media.UploadResponse);

    rpc UploadFile (media.FileUpload) returns (media.FileUploadResponse);
    rpc UploadAndWrite (media.UploadRequest) returns (media.UploadAndWriteResponse);
}
